--- a/framework/metamodel/pom.xml
+++ b/framework/metamodel/pom.xml
@@ -27,6 +27,7 @@
     </parent>
 
     <artifactId>metamodel</artifactId>
+    <version>2.0.1</version>
     <name>QoCIM meta-model</name>
     <description>This package contains all the elements of the QoCIM common meta-model.</description>
     <packaging>jar</packaging>
