--- a/criteria/freshness/pom.xml
+++ b/criteria/freshness/pom.xml
@@ -44,7 +44,13 @@
         <dependency>
             <groupId>qocim</groupId>
             <artifactId>metamodel</artifactId>
-            <version>2.0.1</version>
+            <version>2.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
