--- a/framework/tools/formats/json/pom.xml
+++ b/framework/tools/formats/json/pom.xml
@@ -3,7 +3,7 @@
      it under the terms of the GNU Lesser General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
-     QoCIM meta-model and its related tools are distributed in the hope that it will be useful,
+     QoCIM metamodel and its related tools are distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
      See the GNU Lesser General Public License for more details.
@@ -36,7 +36,12 @@
 		<dependency>
 			<groupId>qocim</groupId>
 			<artifactId>metamodel</artifactId>
-			<version>2.0.0</version>
+			<version>2.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>qocim.criteria</groupId>
+			<artifactId>precision</artifactId>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -56,5 +61,25 @@
 			<version>1.2.17</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>5.1.1</version>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Embed-Dependency>*</Embed-Dependency>
+						<Embed-Transitive>true</Embed-Transitive>
+						<Include-Resource>{maven-resources},{maven-dependencies}</Include-Resource>
+						<Bundle-ClassPath>.,{maven-dependencies}</Bundle-ClassPath>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
