Add Json module in pom file

--- a/framework/tools/pom.xml
+++ b/framework/tools/pom.xml
@@ -27,7 +27,7 @@
     <modules>
         <!-- <module>functions</module> -->
         <!-- <module>routing-filter</module> -->
-        <!-- <module>formats</module>-->
+         <module>formats</module>
     </modules>
 
 </project>
