Add the repository URL to get QoC criteria

--- a/framework/tools/formats/json/pom.xml
+++ b/framework/tools/formats/json/pom.xml
@@ -16,70 +16,78 @@
     Contributor(s):
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 			     http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-			<groupId>qocim.tools</groupId>
-			<artifactId>formats</artifactId>
-			<version>2.0.0</version>
-	</parent>
+    <parent>
+        <groupId>qocim.tools</groupId>
+        <artifactId>formats</artifactId>
+        <version>2.0.0</version>
+    </parent>
 
-	<groupId>qocim.tools.formats</groupId>
-	<artifactId>json</artifactId>
-	<name>Json export format of QoCIM criteria</name>
-	<description>This is a module to export any QoCIM based QoC criteria into Json format.</description>
-	<packaging>jar</packaging>
+    <groupId>qocim.tools.formats</groupId>
+    <artifactId>json</artifactId>
+    <name>Json export format of QoCIM criteria</name>
+    <description>This is a module to export any QoCIM based QoC criteria into Json format.</description>
+    <packaging>jar</packaging>
 
-	<dependencies>
-		<dependency>
-			<groupId>qocim</groupId>
-			<artifactId>metamodel</artifactId>
-			<version>2.1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>qocim.criteria</groupId>
-			<artifactId>precision</artifactId>
-			<version>2.1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.9.1</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-			<version>4.13.2</version>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
-	</dependencies>
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/pierrick-marie/qocim</url>
+        </repository>
+    </repositories>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<version>5.1.1</version>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Embed-Dependency>*</Embed-Dependency>
-						<Embed-Transitive>true</Embed-Transitive>
-						<Include-Resource>{maven-resources},{maven-dependencies}</Include-Resource>
-						<Bundle-ClassPath>.,{maven-dependencies}</Bundle-ClassPath>
-					</instructions>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <dependencies>
+        <dependency>
+            <groupId>qocim</groupId>
+            <artifactId>metamodel</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>qocim.criteria</groupId>
+            <artifactId>precision</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+            <version>4.13.2</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>5.1.1</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Embed-Dependency>*</Embed-Dependency>
+                        <Embed-Transitive>true</Embed-Transitive>
+                        <Include-Resource>{maven-resources},{maven-dependencies}</Include-Resource>
+                        <Bundle-ClassPath>.,{maven-dependencies}</Bundle-ClassPath>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
