--- a/framework/tools/pom.xml
+++ b/framework/tools/pom.xml
@@ -16,17 +16,17 @@
     <parent>
         <groupId>qocim</groupId>
         <artifactId>root</artifactId>
-        <version>2.0.0</version>
+        <version>2.1.1</version>
     </parent>
 
     <artifactId>tools</artifactId>
     <name>QoCIM tools</name>
+    <version>2.1.1</version>
     <description>The QoCIM model: Quality of Context Information Model</description>
     <packaging>pom</packaging>
 
     <modules>
-        <!-- <module>functions</module> -->
-        <!-- <module>routing-filter</module> -->
+         <module>functions</module>
          <module>formats</module>
     </modules>
 
