--- a/framework/metamodel/pom.xml
+++ b/framework/metamodel/pom.xml
@@ -93,6 +93,12 @@
             <artifactId>maven-site-plugin</artifactId>
             <version>3.3</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
